kubernetes/manifests/pod-kubia.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  namespace: dev
spec:
  labels:
    app: kubia
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
